force-app/main/default/objects/ConfigureCommunityTopic__c.object
<CustomObject>
    <fields>
        <fullName>ColorCode__c</fullName>
        <label>Color Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PermissionSetName__c</fullName>
        <label>PermissionSetName</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <label>Profile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Configure Community Topic</label>
    <nameField>
        <label>Community Topics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configure Community Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>